--- a/website/newsletter/251/index.mdx
+++ b/website/newsletter/251/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /251
-title: "This Week In React #251: TanStack Start, ESLint React Hooks, create-vite, tldraw, Isograph | Nitro Modules, Expo Workflows, Expo Live Activity, Nitro Fetch, IAP | W3C, Bloom Filters, WASM 3.0, knip, NPM"
+title: "This Week In React #251: TanStack Start, Router RSC Framework Mode, ESLint React Hooks, create-vite, tldraw, Isograph | Nitro Modules, Expo Workflows, Expo Live Activity, Nitro Fetch, IAP | W3C, Bloom Filters, WASM 3.0, knip, NPM"
 authors: [tboba, piaskowyk]
 date: 09-24-2025
 unlisted: true
