--- a/website/newsletter/251/index.mdx
+++ b/website/newsletter/251/index.mdx
@@ -1,9 +1,8 @@
 ---
 slug: /251
-title: "This Week In React #251: TanStack, React Router, RSC, ESLint, Vite, tldraw, Isograph | Nitro Modules, Expo Workflows, Live Activity, Nitro Fetch, IAP | CSS, WASM, knip, NPM"
+title: "This Week In React #251: TanStack, React Router, RSC, ESLint, Vite, ViewTransition | Nitro Modules, Expo Workflows, Live Activity, Nitro Fetch, IAP | CSS, HTML, WASM, knip, npm"
 authors: [tboba, piaskowyk]
 date: 09-24-2025
-unlisted: true
 ---
 
 Hi everyone!
@@ -144,10 +143,9 @@ Designed specifically for testing, Wallaby features include a **Time Travel Debu
 - 📜 [Let’s Be Specific: CSS Specificity Explained](https://playfulprogramming.com/posts/css-specificity-explained): A quick overview of how to use CSS selectors.
 - 📜 [Vercel – How we made global routing faster with Bloom filters](https://vercel.com/blog/how-we-made-global-routing-faster-with-bloom-filters)
 - 📜 [Frontend complexity and the HTML renaissance](https://olliewilliams.xyz/blog/html-renaissance/): Modern web approaches are great, but sometimes you don't need to use a sledgehammer to crack a nut, especially with the new capabilities of HTML.
-- 📜 [Exploring Service Workers: From Offline to Push Notifications](https://www.rahuljuliato.com/posts/react-service-workers)
 - 📦 [Wasm 3.0 – 64-bit address space, multiple memories, garbage collection, native exception handling](https://webassembly.org/news/2025-09-17-wasm-3.0/)
 - 📦 [knip 5.64 – adds Rstest and bump plugins](https://github.com/webpro-nl/knip/releases/tag/5.64.0)
-- 🔗 [NPM Security](https://github.com/bodadotsh/npm-security-best-practices): A set of best practices on how to stay safe from NPM supply chain attacks.
+- 🔗 [NPM Security Best Practices](https://github.com/bodadotsh/npm-security-best-practices): A set of practices stay safe from npm supply chain attacks.
 - 🎙️ [Syntax – podcast with interview of Vite creator: Evan You](https://syntax.fm/show/939/creator-of-vite-evan-you)
 
 ---
